fix spacing

--- a/src/assets/styles/_landing.scss
+++ b/src/assets/styles/_landing.scss
@@ -176,7 +176,7 @@
   }
   .flex {
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     justify-content: space-between;
   }
   .socials a {
