--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -54,6 +54,10 @@ body {
   margin-bottom: 0px;
 }
 
+.mb-0 {
+  margin-bottom: 0;
+}
+
 .home {
   background-image: url("https://res.cloudinary.com/tonipanoche/image/upload/v1622220724/menstruation-project/mp_home_page_image-min_1.jpg");
   background-attachment: fixed;
